@@ -1121,6 +1121,7 @@ Revision history for Perl extension Imager.
 - loading filter DLLs/DSOs had an off-by-one error allocating a buffer
   for the filename of the library (does anyone use this functionality?)
 - remove old #if 0 code from Imager.xs
+- convert t/t15color.t to Test::More
 
 =================================================================
 
